- Fixed responsive version - Fixed progressbar hover issue - Fixed opacity on text elements and picture wrapper background - Larger close button on mobile devices

--- a/styles/main.sass
+++ b/styles/main.sass
@@ -9,8 +9,13 @@ $paddingSize: 64px
   display: flex
   flex-flow: column-reverse
   width: 360px
+  max-width: calc(100% - 36px)
   height: auto
   z-index: 9999999
+
+  @media(max-width: 480px)
+    left: 50%
+    transform: translateX(-50%)
 
   .slee-notification
     position: relative
@@ -81,14 +86,13 @@ $paddingSize: 64px
       padding: 12px 16px
       border-radius: 10px
       box-shadow: 0 0 $paddingSize rgba(0,0,0,.08)
-      opacity: .9
       font-family: sans-serif
 
       .slee-title
         display: inline-block
         position: relative
         width: 100%
-        line-height: 22px
+        line-height: 26px
         font-weight: 600
         overflow: hidden
         text-overflow: ellipsis
@@ -98,11 +102,11 @@ $paddingSize: 64px
         display: inline-block
         position: relative
         width: 100%
-        line-height: 16px
-        font-size: .92em
+        font-size: .87em
         overflow: hidden
         text-overflow: ellipsis
         white-space: nowrap
+        top: -2px
 
       &.slee-picture
 
@@ -119,6 +123,7 @@ $paddingSize: 64px
           width: 36px
           align-items: center
           justify-content: center
+          background: transparent
 
           img
             display: block
@@ -139,17 +144,22 @@ $paddingSize: 64px
       background-size: 14px
       transition: .15s ease-in-out
 
+      @media(max-width: 480px)
+        height: 22px
+        width: 22px
+        background-size: 18px
+
       &:hover
         opacity: 1
         background-color: rgba(255,255,255,.2)
 
     &.neutral div
-      background: #f0f0f0
+      background: rgba(240, 240, 240, 0.9)
       box-shadow: 0 0 $paddingSize rgba(0,0,0,.05)
 
     &.success
       div
-        background: #17b941
+        background: rgba(23, 185, 65, 0.9)
         color: white
 
       .slee-close-button
@@ -157,19 +167,19 @@ $paddingSize: 64px
 
     &.info
       div
-        background: #1e85f0
+        background: rgba(30, 133, 240, 0.9)
         color: white
 
       .slee-close-button
         background-image: url('./../assets/close_white.svg')
 
     &.warning div
-      background: #f1d500
+      background: rgba(241, 213, 0, 0.9)
       color: black
 
     &.error
       div
-        background: #ec202e
+        background: rgba(236, 32, 46, 0.9)
         color: white
 
       .slee-close-button
@@ -185,11 +195,14 @@ $paddingSize: 64px
       height: 4px
       background: rgba(255,255,255,.5) !important
       width: 0
-      animation-name: progress
-      animation-timing-function: ease-in-out
+      transition: .2s ease-in-out
       border-top:
         left-radius: 3px
         right-radius: 3px
+
+      &.animate
+        animation-name: progress
+        animation-timing-function: ease-in-out
 
   &.top
     top: 18px
